Fix bug 289022: every other click in a text field unfocusses it, so you can't type. Fixed by retargeting keyboard events to a parent view, if their target view has no frame. r=roc, sr=dbaron, a=dbaron.